ops-constellation/k8s/EKS-template/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-rps: "10000"
    # Annotations for ingress, aren't needed for now
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_http_version 1.1;
    #   proxy_set_header Upgrade "websocket";
    #   proxy_set_header Connection "Upgrade";
spec:
  ingressClassName: nginx
  rules:
  - host: [set hostname here]
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: deployer
              port:
                number: 8081
        - path: /http
          pathType: Exact
          backend:
            service:
              name: l2geth
              port:
                number: 8545
        - path: /ws
          pathType: Exact
          backend:
            service:
              name: l2geth
              port:
                number: 8546
